test/libhyperion/syntaxTests/receiveZond/arguments.hyp
contract C {
    receive(uint256) external payable {}
}
// ----
// DeclarationError 6857: (24-33): Receive zond function cannot take parameters.
